# amf-rs

./: .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  Makefile  README.md  build.rs  canary.py  prek.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
issues/closed/: 0001-bug-thread-safety-sigsegv.md  0002-change-async-callback-encoder.md  0003-change-async-callback-decoder.md  0004-enhance-raii-wrapper-for-amf-objects.md  0005-change-zero-copy-encode-decode.md  0006-change-trait-based-handler.md
skills/shiguredo-amf/: SKILL.md
src/: amf.rs  codec_info.rs  decode.rs  dl.rs  encode.rs  error.rs  lib.rs  sys.rs
tests/: test_codec_info.rs  test_encode.rs  test_roundtrip.rs
